SERVER-23168 fix shell crashes on ctrl+c

Previously, unauthenticated shell connections would crash the shell on
ctrl+c, and any connections to mongos would crash the shell on ctrl+c.

Check for currentOp failures and add checks for mongos-specific
currentOp results to fix this.

This also fixes SERVER-16899 (mongos shell connection crash).